Fixed JavaScript and added spacing

--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -52,7 +52,7 @@ main {
 
 footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 10px 20px;
   background-color: rgb(80, 165, 194);
@@ -65,6 +65,10 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+footer p {
+  margin-left: 20px;
 }
 
 h1 {
